[package]
name          = "a10-sys"
description   = "Generate the type definitions for A10"
version       = "0.0.0"
publish       = false
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
edition       = "2021"

[dependencies]
libc         = { version = "0.2.132", default-features = false }

[build-dependencies]
bindgen      = { version = "0.69.4", default-features = false }
